grammar.js
    program: $ => repeat($._toplevel_statement),

    _toplevel_statement: $ => choice(
      $.statement,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_ifndef,
      $.preproc_include,
      $.preproc_def,
      $.preproc_undef,
      $.preproc_error,
      $.preproc_function_def,
    ),

    decimal_integer_literal: _ => token(seq(
      DIGITS,
      optional(choice('l', 'L')),
    )),

    hex_integer_literal: _ => token(seq(
      choice('0x', '0X'),
      HEX_DIGITS,
      optional(choice('l', 'L')),
    )),

    octal_integer_literal: _ => token(seq(
      choice('0o', '0O', '0'),
      sep1(/[0-7]+/, '_'),
      optional(choice('l', 'L')),
    )),

    binary_integer_literal: _ => token(seq(
      choice('0b', '0B'),
      sep1(/[01]+/, '_'),
      optional(choice('l', 'L')),
    )),

    decimal_floating_point_literal: _ => token(choice(
      seq(DECIMAL_DIGITS, '.', optional(DECIMAL_DIGITS), optional(seq((/[eE]/), optional(choice('-', '+')), DECIMAL_DIGITS)), optional(/[fFdD]/)),
      seq('.', DECIMAL_DIGITS, optional(seq((/[eE]/), optional(choice('-', '+')), DECIMAL_DIGITS)), optional(/[fFdD]/)),
      seq(DIGITS, /[eEpP]/, optional(choice('-', '+')), DECIMAL_DIGITS, optional(/[fFdD]/)),
      seq(DIGITS, optional(seq((/[eE]/), optional(choice('-', '+')), DECIMAL_DIGITS)), (/[fFdD]/)),
    )),

    true: _ => 'true',

    false: _ => 'false',

    string_literal: $ => choice(
      alias('"\\\\"', $.escape_sequence),
      seq(
        '"',
        repeat(choice(
          $.escape_sequence,
          $.string_fragment,
          prec(100, $.dqote_escape),
          alias(choice('\\"', '\\\\"'), $.escape_sequence),
          alias(choice('"\\', '"\\\\'), $.escape_sequence),
        )),
        choice('"', '"L'),
      )),

    string_fragment: _ => token.immediate(/[^"\\]+/),

    null_literal: _ => 'null',

    // Expressions

    new_expression: $ => prec.right(-1, seq(
      field('name', $.identifier),
      '{',
      field('params', commaSep(optional(choice($.pair, $.array, $.expression)))),
      '}',
      field('chain', optional(seq('.', $.expression))),
    )),

    pair: $ => seq(
      field('key', $.identifier),
      ':',
      field('value', $.expression),
    ),

    cast_expression: $ => prec(PREC.CAST, choice(
      seq(
        field('value', $.expression),
        'as',
        field('type', $._unannotated_type),
        // optional(seq('.', $.expression)),
      ),
    )),


    assignment_expression: $ => prec.right(PREC.ASSIGN, seq(
      field('left', choice(
        $.identifier,
        $.field_access,
        $.string_splice_expression,
        $.assignment_array_assignment,
        $.array_access,
      )),
      field('operator', choice('=', '+=', '_=', '-=', '*=', '/=', '&=', '|=', '^=', '%=', '<<=', '>>=', '>>>=')),
      field('right', $.expression),
    )),

    binary_expression: $ => choice(
      ...[
        ['>', PREC.REL],
        ['<', PREC.REL],
        ['>=', PREC.REL],
        ['<=', PREC.REL],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['&&', PREC.AND],
        ['||', PREC.OR],
        ['+', PREC.ADD],
        ['_', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULT],
        ['/', PREC.MULT],
        ['&', PREC.BIT_AND],
        ['|', PREC.BIT_OR],
        ['^', PREC.BIT_XOR],
        ['^=', PREC.BIT_XOR],
        ['%', PREC.MULT],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['>>>', PREC.SHIFT],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $.expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $.expression),
        )),
      )),

    lambda_expression: $ => seq(
      '&',
      $._unannotated_type,
      field('parameters', choice(
        $.identifier, $.formal_parameters,
      )),
      field('body', choice($.expression, $.block)),
    ),

    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $.expression),
      '?',
      field('consequence', $.expression),
      ':',
      field('alternative', $.expression),
    )),

    unary_expression: $ => choice(...[
      ['+', PREC.UNARY],
      ['-', PREC.UNARY],
      ['!', PREC.UNARY],
      ['~', PREC.UNARY],
    ].map(([operator, precedence]) =>
      prec.left(precedence, seq(
        // @ts-ignore
        field('operator', operator),
        field('operand', $.expression),
      )),
    )),

    array: $ => seq(
      '[',
      commaSep(optional($.expression)),
      ']',
    ),

    pointer_identifier: $ => seq(
      '&',
      $.identifier,
    ),

    parenthesized_expression: $ => seq('(', $.expression, ')'),


    field_access: $ => seq(
      field('object', $.primary_expression),
      seq('.', field('ptr', optional('&'))),
      field('field', choice($.identifier, $.this)),
    ),

    array_access: $ => prec(10, seq(
      field('array', $.primary_expression),
      choice('._[', '['),
      field('index', commaSep($.expression)),
      ']',
    )),

    string_splice_expression: $ => prec(11, seq(
      field('name', choice($.primary_expression, $.identifier)),
      '[',
      optional(field('start_index', $.expression)),
      ':',
      optional(field('end_index', $.expression)),
      ']',
    )),

    method_invocation: $ => prec(1, seq(
      choice(
        field('name', $.array_access),
        field('name', $.method_invocation),
        field('name', $.parenthesized_expression),
        field('name',
          choice(
            $.identifier,
            alias('str', $.identifier),
            alias('int', $.identifier),
            alias('long', $.identifier),
            alias('float', $.identifier),
            alias('double', $.identifier),
            alias('bool', $.identifier),
            alias('byte', $.identifier),
          )),
        seq(
          field('object', $.primary_expression),
          '.',
          field('type_arguments', optional($.type_arguments)),
          field('name', $.identifier),
        ),
      ),
      field('arguments', $.argument_list),
    )),

    lambda_invocation: $ => seq(
      field('object', $.primary_expression),
      '.',
      field('function', $.lambda_expression),
    ),

    argument_list: $ => seq('(', commaSep($.expression), ')'),

    super_invocation: $ => seq(
      'super',
      $.argument_list,
    ),

    block: $ => seq(
      '{', repeat(choice(
        $.statement,
        alias($.preproc_if_in_block, $.preproc_if),
        alias($.preproc_ifdef_in_block, $.preproc_ifdef),
        alias($.preproc_ifndef_in_block, $.preproc_ifndef),
      )),
      '}',
    ),

    expression_statement: $ => seq(
      $.expression,
      ';',
    ),

    return_statement: $ => seq(
      'return',
      optional(repeat($.expression)),
      optional(alias($.preproc_if_in_return_statement, $.preproc_if)),
      optional(alias($.preproc_ifdef_in_return_statement, $.preproc_ifdef)),
      optional(alias($.preproc_ifndef_in_return_statement, $.preproc_ifndef)),
      ';',
    ),

    enum_declaration: $ => seq(
      optional($.modifiers),
      'enum',
      choice(
        seq(
          field('name', $.identifier),
          optional(seq(':', field('underlying_type', $._unannotated_type))),
          field('body', optional($.enumerator_list)),
        ),
        field('body', $.enumerator_list),
      ),
    ),

    enumerator_list: $ => seq(
      '{',
      repeat(choice(
        seq($.enumerator, ','),
        alias($.preproc_if_in_enumerator_list, $.preproc_if),
        alias($.preproc_ifdef_in_enumerator_list, $.preproc_ifdef),
        alias($.preproc_ifndef_in_enumerator_list, $.preproc_ifndef),
      )),
      optional(seq(
        choice(
          $.enumerator,
          alias($.preproc_if_in_enumerator_list_no_comma, $.preproc_if),
          alias($.preproc_ifdef_in_enumerator_list_no_comma, $.preproc_ifdef),
          alias($.preproc_ifndef_in_enumerator_list_no_comma, $.preproc_ifndef),
        ),
      )),
      '}',
    ),

    enumerator: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $.expression))),
    ),

    class_declaration: $ => seq(
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      optional(seq(':', field('underlying_type', $._unannotated_type))),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('superclass', $.superclass)),
      optional(field('interfaces', $.super_interfaces)),
      field('body', $.class_body),
    ),

    modifiers: $ => repeat1(choice(
      'public',
      'protected',
      'private',
      'abstract',
      'final',
      'native',
    )),

    superclass: $ => seq(
      'extends',
      $._unannotated_type,
    ),

    super_interfaces: $ => seq(
      'implements',
      $.type_list,
    ),

    type_list: $ => seq(
      $._unannotated_type,
      repeat(seq(',', $._unannotated_type)),
    ),

    class_body: $ => seq(
      '{',
      repeat(choice(
        $._class_body_declaration,
        alias($.preproc_if_in_class_body, $.preproc_if),
        alias($.preproc_ifdef_in_class_body, $.preproc_ifdef),
        alias($.preproc_ifndef_in_class_body, $.preproc_ifndef),
      )),
      '}',
    ),

    _class_body_declaration: $ => choice(
      $.field_declaration,
      $.method_declaration,
      $.method_signature_declaration,
      $.class_declaration,
      $.interface_declaration,
      $.enum_declaration,
      $.block,
      $.array_of,
      $.constructor_declaration,
      ';',
    ),

    field_declaration: $ => seq(
      optional('const'),
      optional($.modifiers),
      optional($.ptr_type),
      choice(field('type', $._unannotated_type), $.amazin_void_type),
      $._variable_declarator_list,
      ';',
    ),

    _variable_declarator_list: $ => commaSep1(
      field('declarator', $.variable_declarator),
    ),

    variable_declarator: $ => seq(
      $._variable_declarator_id,
      optional(seq('=', optional($.variable_cast), field('value', $._variable_initializer))),
    ),

    _variable_declarator_id: $ => prec(1, seq(
      field('name', $.identifier),
    )),

    _variable_initializer: $ => choice(
      $.expression,
    ),

    _unannotated_type: $ => choice(
      $._simple_type,
      prec(1, $.void_type),
    ),

    amazin_void_type: $ => prec(-1, seq(
      field('amazing_type', $._simple_type),
      '(',
      commaSep($.formal_parameter),
      ')',
    )),

    _simple_type: $ => choice(
      $.void_type,
      $.integral_type,
      $.floating_point_type,
      $.fix_type,
      $.str_type,
      $.boolean_type,
      alias($.identifier, $.type_identifier),
    ),

    integral_type: _ => choice(
      'byte',
      'int',
      'long',
    ),

    void_type: _ => 'void',

    ptr_type: _ => 'ptr',

    str_type: _ => 'str',

    formal_parameters: $ => seq(
      '(',
      seq(
        optional($.receiver_parameter),
        commaSep(choice($.formal_parameter)),
      ),
      ')',
    ),

    formal_parameter: $ => seq(
      optional(choice(
        seq(
          optional($.modifiers),
          field('type', $._unannotated_type),
        ),
        $.amazin_void_type,
      )),
      choice($._variable_declarator_id, field('type', $._unannotated_type)),
    ),

    receiver_parameter: $ => seq(
      $.this,
    ),

    local_variable_declaration: $ => prec(100, choice(
      seq(
        choice($.identifier,
          alias('str', $.identifier),
          alias('int', $.identifier),
          alias('long', $.identifier),
          alias('float', $.identifier),
          alias('double', $.identifier),
          alias('bool', $.identifier),
        ),
        field('accepts', $.argument_list),
        $.variable_declarator,
      ),
      seq(
        seq(optional(field('native_type', 'native')), optional('const'), optional($.ptr_type), field('type', ($.amazin_void_type, $._unannotated_type))),
        optional(field('accepts', $.argument_list)),
        $._variable_declarator_list,
        ';',
      ),
    )),

    function_declaration: $ => seq(
      optional($.modifiers),
      field('type', choice($._unannotated_type)),
      field('name', $.identifier),
      field('parameters', $.formal_parameters),
      field('body', $.block),
    ),

    method_declaration: $ => seq(
      optional($.modifiers),
      seq(
        optional(
          field('type_parameters', $.type_parameters),
        ),
        field('type', choice($._unannotated_type, $.amazin_void_type)),
        seq(
          field('name', $.identifier),
          field('parameters', $.formal_parameters),
        ),
      ),
      field('body', $.block),
    ),

    this: _ => 'this',

    // @ts-ignore
    identifier: _ => /[\p{XID_Start}_$][\p{XID_Continue}\u00A2_$]*/,

    block_comment: _ => token(prec(PREC.COMMENT,
      seq(
        '/*',
        /[^*]*\*+([^/*][^*]*\*+)*/,
        '/',
      ),
    )),
