test/corpus/class.txt
============================================
Class 1
============================================

class Foo {
  private int x = 1;
  protected str y = "v";
  protected X y = "v";
  ptr X y;
  X x = a;
}

----

(program
  (class_declaration
    (identifier)
    (class_body
      (field_declaration
        (modifiers)
        (integral_type)
        (variable_declarator
          (identifier)
          (decimal_integer_literal)))
      (field_declaration
        (modifiers)
        (str_type)
        (variable_declarator
          (identifier)
          (string_literal
            (string_fragment))))
      (field_declaration
        (modifiers)
        (type_identifier)
        (variable_declarator
          (identifier)
          (string_literal
            (string_fragment))))
      (field_declaration
        (ptr_type)
        (type_identifier)
        (variable_declarator
          (identifier)))
      (field_declaration
        (type_identifier)
        (variable_declarator
          (identifier)
          (identifier))))))

============================================
Class 2
============================================

class X  extends Y {
  private void a(int b, str c) {
  }
}

----

(program
  (class_declaration
    (identifier)
    (superclass
      (type_identifier))
    (class_body
      (method_declaration
        (modifiers)
        (void_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (integral_type)
            (identifier))
          (formal_parameter
            (str_type)
            (identifier)))
        (block)))))

============================================
Class 3
============================================

class A implements B {
  private void X(int a, str b) {
  }
}

----

(program
  (class_declaration
    (identifier)
    (super_interfaces
      (type_list
        (type_identifier)))
    (class_body
      (method_declaration
        (modifiers)
        (void_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (integral_type)
            (identifier))
          (formal_parameter
            (str_type)
            (identifier)))
        (block)))))

============================================
Class 4
============================================

XX x = A{ _id: "", c: 0,  d: 0, e: 0 };

----

(program
  (local_variable_declaration
    (type_identifier)
    (variable_declarator
      (identifier)
      (new_expression
        (identifier)
        (pair
          (identifier)
          (string_literal))
        (pair
          (identifier)
          (decimal_integer_literal))
        (pair
          (identifier)
          (decimal_integer_literal))
        (pair
          (identifier)
          (decimal_integer_literal))))))

============================================
Class 5
============================================

class A implements B {
  private void a(int b, str c) {
    super();
  }
}

----

(program
  (class_declaration
    (identifier)
    (super_interfaces
      (type_list
        (type_identifier)))
    (class_body
      (method_declaration
        (modifiers)
        (void_type)
        (identifier)
        (formal_parameters
          (formal_parameter
            (integral_type)
            (identifier))
          (formal_parameter
            (str_type)
            (identifier)))
        (block
          (expression_statement
            (super_invocation
              (argument_list))))))))

============================
Class 6
============================

class X {
  public void x() {
    return a(b, C{[index]}, d);
  }
}

-----

(program
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (modifiers)
        (void_type)
        (identifier)
        (formal_parameters)
        (block
          (return_statement
            (method_invocation
              (identifier)
              (argument_list
                (identifier)
                (new_expression
                  (identifier)
                  (array
                    (identifier)))
                (identifier)))))))))
